2006-08-03  Paolo Bonzini  <bonzini@gnu.org>
	    Corinna Vinschen  <vinschen@redhat.com>

	* lib/getline.c (getline): Remove Windows special casing.
	* lib/utils.c (register_open_file, ck_fdopen): New.
	(ck_fopen, ck_mkstemp): Use register_open_file.
	* lib/utils.h (ck_fdopen): New.
	* sed/execute.c (open_next_file): Reopen stdin.
	* sed/sed.h (read_mode): New.
	* sed/sed.c (read_mode): New.
	(main): Set it on --binary.
	(usage): Document --binary.
	* sed/compile.c (get_openfile): Change second argument to char
	and turn it into a string within the function.  Adjust callers.
	* sed/execute.c (dump_append_queue, open_next_file): Use it
	as mode for ck_fopen.

2006-08-03  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (str_append): Use is_utf8 to skip useless work.
	* sed/mbcs.c (initialize_mbcs): Look for a UTF-8 locale.
	(is_utf8): New.
	* sed/sed.h (is_utf8): New.

2006-07-13  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Add a few autoconfy tests.
	* Makefile.am: Update distributed bootstrap.sh.

2006-05-15  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* sed/basicdefs.h (OB_MALLOC): Turn VCAST into void * cast.

2006-02-03  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (compile_program) <case 'y'>: Pass false to match_slash.

2005-09-07  Paolo Bonzini  <bonzini@gnu.org>

	* lib/regcomp.c: Update from upstream.
	* lib/regex.c: Update from upstream.
	* lib/regex_.h: Update from upstream.
	* lib/regex_internal.c: Update from upstream.
	* lib/regex_internal.h: Update from upstream.
	* lib/regexec.c: Update from upstream.

2005-08-30  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (reset_addresses): Never activate ADDR_IS_NUM_MOD
	addresses.
	* testsuite/modulo.good, testsuite/modulo.inp, testsuite/modulo.sed:
	New.
	* testsuite/Makefile.tests: Add new testcase.
	* testsuite/Makefile.am: Add new testcase.
	* testsuite/Makefile.in: Regenerate.

2005-05-18  Maciej W. Rozycki  <macro@linux-mips.org>
